--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-size: 16px;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
@@ -10,34 +20,68 @@ body {
   margin: 0;
 }
 
+header h1 {
+  margin-bottom: 10px;
+}
+
 .weather-info {
   width: 300px;
-  padding: 20px;
-  background-color: #fff;
+  background-color: #2c77a8; 
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #fff;
 }
 
-.city-name {
-  font-size: 24px;
-  margin: 0;
+article {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
+
 
 .temperature {
-  font-size: 18px;
+  font-size: 6rem;
+  padding-top: 10px;
 }
 
 .description {
-  font-size: 16px;
+  font-size: 1.4rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-transform: capitalize;
 }
 
 .humidity,
-.wind {
-  font-size: 14px;
-  margin: 5px 0;
+.wind, .city {
+  font-size: 1.4rem;
+  display: flex;
+  gap: 10px;
+  padding: 10px;
+  align-items: center;
+
 }
 
-.flex-row {
+.column {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: flex-start;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  border-top: 1px solid white;
+}
+
+.grid > div:first-child {
+  border-right: 1px solid white;
+}
+
+i {
+  font-size: 2.5rem;
+}
+
